--- a/package.json
+++ b/package.json
@@ -63,14 +63,14 @@
     "lucide-react": "^0.532.0",
     "motion": "^12.23.12",
     "nanoid": "^5.1.5",
-    "next": "15.4.3",
+    "next": "^15.5.6",
     "next-themes": "^0.4.6",
     "pixi.js": "^8.13.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
-    "react-syntax-highlighter": "^15.6.1",
+    "react-syntax-highlighter": "^16.1.0",
     "sonner": "^2.0.7",
     "tailwind-gradient-mask-image": "^1.2.0",
     "tailwind-merge": "^3.3.1",
